<resources>
    <string name="app_name">KitchenGo Premium</string>
    <string name="main_title">KitchenGo Premium KDS</string>
    <string name="order_queue_display_title">Order Queue Display</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_kdsuistations">KDS stations relationship</string>
    <string name="title_activity_kdsactivity_unbump">Unbump order</string>
    <string name="title_activity_kdsuistations_config">Configurations</string>
    <string name="title_activity_kdsuiretrive_config">Retrieve remote config</string>
    <string name="menu_activity_cleardb">Clear database</string>
    <string name="menu_activity_showip">Show my ip</string>
    <string name="menu_activity_touchpad">Toggle touch pad on/off</string>
    <string name="menu_activity_export">Export settings</string>
    <string name="menu_activity_import">Import settings</string>
    <string name="menu_activity_stations">Show active stations</string>
    <string name="touchpad_next">Next</string>
    <string name="touchpad_prev">Prev</string>
    <string name="touchpad_up">Up</string>
    <string name="touchpad_down">Down</string>
    <string name="touchpad_bump">Bump</string>
    <string name="touchpad_unbump">Unbump</string>
    <string name="touchpad_unbump_last">Unb. Last</string>
    <string name="touchpad_sum">Sum</string>
    <string name="touchpad_transfer">Transfer</string>
    <string name="touchpad_sort">Sort</string>
    <string name="touchpad_test">Test</string>
    <string name="touchpad_more">More</string>
    <string name="touchpad_active">Active Stations</string>
    <string name="touchpad_exit">Exit</string>
    <string name="touchpad_park">Park</string>
    <string name="touchpad_unpark">Unpark</string>
    <string name="touchpad_print">Print</string>
    <string name="touchpad_buildcard">Build Card</string>
    <string name="touchpad_training">Training</string>
    <string name="touchpad_page">Page</string>
    <string name="sort_time_ascend">Waiting time ascend</string>
    <string name="sort_time_descen">Waiting time descend</string>
    <string name="sort_name_ascend">Order number ascend</string>
    <string name="sort_name_descend">Order number descend</string>
    <string name="sort_count_ascend">Items count ascend</string>
    <string name="sort_count_descend">Items count descend</string>
    <string name="sort_preptime_ascend">Preparation time ascend</string>
    <string name="sort_preptime_descend">Preparation time descend</string>
    <string name="restore">Restore</string>
    <string name="unpark">Unpark</string>
    <string name="addon">Add-on</string>
    <string name="str_default">Default</string>
    <string name="order_state_waiting">Waiting</string>
    <string name="order_state_processing">Processing</string>
    <string name="order_state_delivering">Delivering to counter</string>
    <string name="order_state_sold_out">Sold out</string>
    <string name="order_state_others">Others</string>
    <string name="info_first_message">Logic Controls KDS messages</string>
    <string name="confirm_remove_relations_expo">Expeditor station # will be removed from Expo column, are you sure you want to change this?</string>
    <string name="confirm_clear_db">Do you want to clear database?</string>
    <string name="clear_db">Clear database</string>
    <string name="confirm_export_db">Do you want to export settings to</string>
    <string name="confirm_import_db">Do you want to import settings from</string>
    <string name="data_backup_to">The data have been backup to</string>
    <string name="save">Save</string>
    <string name="input_station_id">This station doesn\'t have a ID yet, you will not be able to use it until you setup its ID!</string>
    <string name="input_id_title">Please enter station ID(1~99)</string>
    <string name="confirm_bump_normal">Do you want to bump order # ?</string>
    <string name="confirm_bump_expo_outstanding">Order # contains outstanding items.Do you still want to bump it?</string>
    <string name="error_isnot_unique_id">The ID # used by others.Please change it.</string>
    <string name="error_id_out_range">Please input ID value between 1 and 99.</string>
    <string name="error_id_is_empty">Please input ID.</string>
    <string name="error_different_relations">The stations relationship is different with others, please edit stations relationship first.</string>
    <string name="error_match_mac">Please run it in bematech device.</string>
    <string name="back">Back</string>
    <string name="clear_messages">Clear log</string>
    <string name="pref_header_general">General</string>
    <string name="pref_kds_stations_title_relations">Stations relationship</string>
    <string name="pref_kds_caption_title">Order header display</string>
    <string name="pref_kds_item_title">Item display</string>
    <string name="pref_kds_condiment_title">Condiment display</string>
    <string name="pref_kds_premsg_title">Pre-message display</string>
    <string name="pref_kds_footer_title">Footer settings</string>
    <string name="pref_kds_notification_enabled">Enable bump notification</string>
    <string name="pref_kds_bumping_title">Bumping settings</string>
    <string name="pref_kds_bumpbar_title">Bumpbar assignment</string>
    <string name="pref_kds_printer_title">Printer settings</string>
    <string name="pref_kds_smartorder_title">Smart order</string>
    <string name="pref_kds_beeper_title">Beeper</string>
    <string name="pref_kds_highlight_title">Highlight properties</string>
    <string name="pref_kds_expalert_title">Expeditor Alert</string>
    <string name="pref_kds_sum_title">Summary</string>
    <string name="pref_kds_touch_font">Touch button font</string>
    <string name="pref_kds_touch_title">Touch buttons</string>
    <string name="pref_kds_touch_next_enabled">Enable [next] touch button</string>
    <string name="pref_kds_touch_prev_enabled">Enable [prev] touch button</string>
    <string name="pref_kds_touch_up_enabled">Enable [up] touch button</string>
    <string name="pref_kds_touch_down_enabled">Enable [down] touch button</string>
    <string name="pref_kds_touch_bump_enabled">Enable [bump] touch button</string>
    <string name="pref_kds_touch_unbump_enabled">Enable [unbump] touch button</string>
    <string name="pref_kds_touch_unbumplast_enabled">Enable [unbump last] touch button</string>
    <string name="pref_kds_touch_sum_enabled">Enable [sum] touch button</string>
    <string name="pref_kds_touch_transfer_enabled">Enable [transfer] touch button</string>
    <string name="pref_kds_touch_sort_enabled">Enable [sort] touch button</string>
    <string name="pref_kds_touch_park_enabled">Enable [park] touch button</string>
    <string name="pref_kds_touch_unpark_enabled">Enable [unpark] touch button</string>
    <string name="pref_kds_touch_print_enabled">Enable [print] touch button</string>
    <string name="pref_kds_touch_more_enabled">Enable [more] touch button</string>
    <string name="pref_kds_touch_test_enabled">Enable [test] touch button</string>
    <string name="pref_kds_touch_buildcard_enabled">Enable [buildcard] touch button</string>
    <string name="pref_kds_touch_training_enabled">Enable [training] touch button</string>
    <string name="pref_kds_touch_page_enabled">Enable [page] touch button</string>
    <string name="pref_kds_orders_display">Orders display</string>
    <string name="pref_kds_category_orders">Orders</string>
    <string name="pref_kds_category_ordercontent">Order content</string>
    <string name="pref_kds_category_operations">Order operations</string>
    <string name="pref_kds_category_others">Others</string>
    <string name="pref_kds_category_extra_func">Extra feature</string>
    <string name="pref_kds_media_title">Build Card/Training</string>
    <string name="pref_queue_show_order_timer">Show order timer</string>
    <string name="queue_order_timer_font">Order timer font</string>
    <string name="more_orders">More orders</string>
    <string name="pref_kds_queue_title">Queue display</string>
    <string name="pref_queue_bg">Background color</string>
    <string name="pref_kds_sound_title">Sound</string>
    <string name="pref_kds_tracker_map">Location ID and Location map</string>
    <string name="tracker_title_message">Header title message</string>
    <string name="tracker_default_title">Tracker location</string>
    <string name="pref_tracker_cols">Table Tracker display columns (1-4)</string>
    <string name="pref_tracker_cell_height">Tracker panel height</string>
    <string name="pref_tracker_auto_pages_switch_duration">Auto switching duration(seconds)</string>
    <string name="tracker_order_name_font">Tracker order name font</string>
    <string name="tracker_table_name_font">Tracker location name font</string>
    <string name="pref_tracker_more_orders_message">More orders message</string>
    <string name="pref_tracker_auto_assign_timeout">Auto assign tracker ID timeout(seconds)</string>
    <string name="pref_tracker_auto_remove_after_expo_bump_timeout">The timeout of auto bumping after expo bump order(minutes)</string>
    <string name="pref_tracker_alert_order_not_bump_timeout">The timeout for order was not bumped after a long time(minutes)</string>
    <string name="pref_tracker_alert_font">The alert font</string>
    <string name="pref_tracker_enable_auto_bump">Enable auto bump</string>
    <string name="pref_pager_title">Pager</string>
    <string name="menu_activity_restore">Restore database</string>
    <string name="pref_kds_qexpo_title">Queue-Expo</string>
    <string name="pref_tracker_id_from_userinfo_or_guesttable">The table-tracker number is from \"UserInfo\" or \"GuestTable\" tag</string>
    <string name="tracker_reverse_color_ttid_empty">Reverse color if tracker-id is empty</string>
    <string name="pref_tracker_show_assigned_tracker_id">Show assigned tracker ID</string>
    <string name="pref_tracker_id_font">Tracker ID font</string>
    <string name="pref_tracker_auto_assign_id">Enable Auto assign tracker ID</string>
    <string name="summary">Summary</string>
    <string name="pref_kds_screenb_orders_display">Split screen display</string>
    <string name="line_items_display">Line items display</string>
    <string name="advanced_summary">Advanced summary</string>
    <string name="tab_display">Tab display</string>
    <string name="enable_order_status_notify">Enable order status changed notification</string>
    <string name="enable_item_qty_notify">Enable item quantity changed notification</string>
    <string name="notification">Notification</string>
    <string name="remote_support">Remote support</string>
    <string name="log">Log</string>
    <string name="pref_kds_touch_prev_page_enabled">Enable [prev page] touch button</string>
    <string name="pref_kds_touch_next_page_enabled">Enable [next page] touch button</string>
    <string name="screen_title">KDS Station</string>
    <string name="enable_order_ack">Enable order acknowledgement</string>
    <string name="pref_kds_transfer_title">Transfer</string>
    <string name="logout">Logout</string>
    <string name="cleaning">Cleaning</string>
    <string name="runner_confirm_bump_summary">Runner can not bump item and order unless all its prep station bumped</string>
    <string name="runner">Runner</string>
    <string name="runner_hide_finished_category">Hide finished items</string>
    <string name="summary_station">Summary station</string>
    <string name="finish_item_by_bump_order">Finish items by [bump order]</string>
    <string name="bump_order_will_bring_up_next_items">[Bump order] will bring up next items based on CatDelay value.</string>
    <string name="title_runner_confirmation_bump">Runner confirmation bump</string>
    <string name="pos_messages">POS messages</string>
    <string name="start_item_manually">Start item manually</string>
    <string name="use_bump_start_item_cook">Use [Bump item] to start focused item.</string>
</resources>