<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="runner_confirm_bump"
        android:title="@string/title_runner_confirmation_bump"
        android:summary="@string/runner_confirm_bump_summary"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="runner_hide_finished_category"
        android:title="@string/runner_hide_finished_category"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="runner_finish_items_by_bump_order"
        android:title="@string/finish_item_by_bump_order"
        android:summary="@string/bump_order_will_bring_up_next_items"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="runner_start_item_manually"
        android:title="@string/start_item_manually"
        android:summary="@string/use_bump_start_item_cook"
        android:defaultValue="false" />

</PreferenceScreen>
